exports[`actions > analysis create analysis should work 1`] = `
Object {
  "payload": Object {
    "analysis": Object {
      "groupId": "group-id",
      "name": "Mock Analysis",
      "siteId": "site-id",
    },
    "organizationId": "organization-id",
  },
  "type": "add analysis",
}
`;

exports[`actions > analysis create analysis should work 2`] = `
Object {
  "payload": Object {
    "args": Array [
      "/analysis/new-entity-id",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`actions > analysis delete analysis should work 1`] = `
Array [
  Object {
    "payload": "site-id",
    "type": "delete analysis",
  },
  Object {
    "payload": Object {
      "args": Array [
        "/organization/organization-id",
      ],
      "method": "push",
    },
    "type": "@@router/CALL_HISTORY_METHOD",
  },
]
`;
